# BinaryFileGenerator

./: .gitignore  CMakeLists.txt  README.md  binTranslator.sublime-project  binTranslator.sublime-workspace
include/: BinaryTranslator.hpp  Type.hpp
input/: main.txt  menu.txt  program.txt  scene2.txt  square.txt
src/: BinaryTranslator.cpp  main.cpp
